// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDatePicker localization accepts the locale prop 1`] = `
<span
  class="euiDatePicker testClass1 testClass2 emotion-euiDatePicker-inline-shadow-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout-group"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly"
    >
      <div
        class="react-datepicker emotion-euiReactDatePicker"
      >
        <div
          class="react-datepicker__triangle"
        />
        <button
          aria-label="Previous Month"
          class="euiButtonIcon react-datepicker__navigation react-datepicker__navigation--previous emotion-euiButtonIcon-s-empty-text"
          data-test-subj="test subject string-calendar-prev-month"
          title="Previous Month"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </button>
        <button
          aria-label="Next month"
          class="euiButtonIcon react-datepicker__navigation react-datepicker__navigation--next emotion-euiButtonIcon-s-empty-text"
          data-test-subj="test subject string-calendar-next-month"
          title="Next month"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </button>
        <div
          class="react-datepicker__month-container"
        >
          <div
            class="react-datepicker__header"
          >
            <div
              class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
            >
              <div
                class="react-datepicker__month-dropdown-container react-datepicker__month-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the month selector. 7월 is currently selected."
                  class="react-datepicker__month-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__month-read-view--selected-month"
                  >
                    7월
                  </span>
                  <span
                    class="react-datepicker__month-read-view--down-arrow"
                    color="subdued"
                    data-euiicon-type="arrowDown"
                  />
                </div>
              </div>
              <div
                class="react-datepicker__year-dropdown-container react-datepicker__year-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the year selector. 2019 is currently selected."
                  class="react-datepicker__year-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__year-read-view--selected-year"
                  >
                    2019
                  </span>
                  <span
                    class="react-datepicker__year-read-view--down-arrow"
                    color="subdued"
                    data-euiicon-type="arrowDown"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-datepicker__day-names"
            >
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  일
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  일요일
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  월
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  월요일
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  화
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  화요일
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  수
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  수요일
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  목
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  목요일
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  금
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  금요일
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  토
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  토요일
                </span>
              </div>
            </div>
          </div>
          <div
            aria-label="7월, 2019"
            class="react-datepicker__month react-datepicker__month--accessible"
            role="listbox"
            tabindex="0"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            />
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--mon react-datepicker__day--selected"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                4
              </div>
              <div
                aria-label="day-5"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                5
              </div>
              <div
                aria-label="day-6"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                6
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-7"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                7
              </div>
              <div
                aria-label="day-8"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                8
              </div>
              <div
                aria-label="day-9"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                9
              </div>
              <div
                aria-label="day-10"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                10
              </div>
              <div
                aria-label="day-11"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                11
              </div>
              <div
                aria-label="day-12"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                12
              </div>
              <div
                aria-label="day-13"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                13
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-14"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                14
              </div>
              <div
                aria-label="day-15"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                15
              </div>
              <div
                aria-label="day-16"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                16
              </div>
              <div
                aria-label="day-17"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                17
              </div>
              <div
                aria-label="day-18"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                18
              </div>
              <div
                aria-label="day-19"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                19
              </div>
              <div
                aria-label="day-20"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                20
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-21"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                21
              </div>
              <div
                aria-label="day-22"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                22
              </div>
              <div
                aria-label="day-23"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                23
              </div>
              <div
                aria-label="day-24"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                24
              </div>
              <div
                aria-label="day-25"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                25
              </div>
              <div
                aria-label="day-26"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                26
              </div>
              <div
                aria-label="day-27"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                27
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-28"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                28
              </div>
              <div
                aria-label="day-29"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                29
              </div>
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-31"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                31
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--thu react-datepicker__day--outside-month"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--fri react-datepicker__day--outside-month"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                3
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`EuiDatePicker localization inherits locale from context 1`] = `
<span
  class="euiDatePicker testClass1 testClass2 emotion-euiDatePicker-inline-shadow-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout-group"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper-inGroup-prependOnly-appendOnly"
    >
      <div
        class="react-datepicker emotion-euiReactDatePicker"
      >
        <div
          class="react-datepicker__triangle"
        />
        <button
          aria-label="Previous Month"
          class="euiButtonIcon react-datepicker__navigation react-datepicker__navigation--previous emotion-euiButtonIcon-s-empty-text"
          data-test-subj="test subject string-calendar-prev-month"
          title="Previous Month"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortLeft"
          />
        </button>
        <button
          aria-label="Next month"
          class="euiButtonIcon react-datepicker__navigation react-datepicker__navigation--next emotion-euiButtonIcon-s-empty-text"
          data-test-subj="test subject string-calendar-next-month"
          title="Next month"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="sortRight"
          />
        </button>
        <div
          class="react-datepicker__month-container"
        >
          <div
            class="react-datepicker__header"
          >
            <div
              class="react-datepicker__header__dropdown react-datepicker__header__dropdown--scroll"
            >
              <div
                class="react-datepicker__month-dropdown-container react-datepicker__month-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the month selector. juillet is currently selected."
                  class="react-datepicker__month-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__month-read-view--selected-month"
                  >
                    juillet
                  </span>
                  <span
                    class="react-datepicker__month-read-view--down-arrow"
                    color="subdued"
                    data-euiicon-type="arrowDown"
                  />
                </div>
              </div>
              <div
                class="react-datepicker__year-dropdown-container react-datepicker__year-dropdown-container--scroll"
              >
                <div
                  aria-label="Button. Open the year selector. 2019 is currently selected."
                  class="react-datepicker__year-read-view"
                  style="visibility: visible;"
                  tabindex="0"
                >
                  <span
                    class="react-datepicker__year-read-view--selected-year"
                  >
                    2019
                  </span>
                  <span
                    class="react-datepicker__year-read-view--down-arrow"
                    color="subdued"
                    data-euiicon-type="arrowDown"
                  />
                </div>
              </div>
            </div>
            <div
              class="react-datepicker__day-names"
            >
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  lu
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  lundi
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  ma
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  mardi
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  me
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  mercredi
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  je
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  jeudi
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  ve
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  vendredi
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  sa
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  samedi
                </span>
              </div>
              <div
                class="react-datepicker__day-name"
              >
                <span
                  aria-hidden="true"
                >
                  di
                </span>
                <span
                  class="emotion-euiScreenReaderOnly"
                >
                  dimanche
                </span>
              </div>
            </div>
          </div>
          <div
            aria-label="juillet, 2019"
            class="react-datepicker__month react-datepicker__month--accessible"
            role="listbox"
            tabindex="0"
          >
            <span
              class="emotion-euiScreenReaderOnly"
            />
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--mon react-datepicker__day--selected"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                4
              </div>
              <div
                aria-label="day-5"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                5
              </div>
              <div
                aria-label="day-6"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                6
              </div>
              <div
                aria-label="day-7"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                7
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-8"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                8
              </div>
              <div
                aria-label="day-9"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                9
              </div>
              <div
                aria-label="day-10"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                10
              </div>
              <div
                aria-label="day-11"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                11
              </div>
              <div
                aria-label="day-12"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                12
              </div>
              <div
                aria-label="day-13"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                13
              </div>
              <div
                aria-label="day-14"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                14
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-15"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                15
              </div>
              <div
                aria-label="day-16"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                16
              </div>
              <div
                aria-label="day-17"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                17
              </div>
              <div
                aria-label="day-18"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                18
              </div>
              <div
                aria-label="day-19"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                19
              </div>
              <div
                aria-label="day-20"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                20
              </div>
              <div
                aria-label="day-21"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                21
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-22"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                22
              </div>
              <div
                aria-label="day-23"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                23
              </div>
              <div
                aria-label="day-24"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                24
              </div>
              <div
                aria-label="day-25"
                class="react-datepicker__day react-datepicker__day--thu"
                role="option"
              >
                25
              </div>
              <div
                aria-label="day-26"
                class="react-datepicker__day react-datepicker__day--fri"
                role="option"
              >
                26
              </div>
              <div
                aria-label="day-27"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend"
                role="option"
              >
                27
              </div>
              <div
                aria-label="day-28"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend"
                role="option"
              >
                28
              </div>
            </div>
            <div
              class="react-datepicker__week"
            >
              <div
                aria-label="day-29"
                class="react-datepicker__day react-datepicker__day--mon"
                role="option"
              >
                29
              </div>
              <div
                aria-label="day-30"
                class="react-datepicker__day react-datepicker__day--tue"
                role="option"
              >
                30
              </div>
              <div
                aria-label="day-31"
                class="react-datepicker__day react-datepicker__day--wed"
                role="option"
              >
                31
              </div>
              <div
                aria-label="day-1"
                class="react-datepicker__day react-datepicker__day--thu react-datepicker__day--outside-month"
                role="option"
              >
                1
              </div>
              <div
                aria-label="day-2"
                class="react-datepicker__day react-datepicker__day--fri react-datepicker__day--outside-month"
                role="option"
              >
                2
              </div>
              <div
                aria-label="day-3"
                class="react-datepicker__day react-datepicker__day--sat react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                3
              </div>
              <div
                aria-label="day-4"
                class="react-datepicker__day react-datepicker__day--sun react-datepicker__day--weekend react-datepicker__day--outside-month"
                role="option"
              >
                4
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</span>
`;

exports[`EuiDatePicker renders 1`] = `
<span
  class="euiDatePicker testClass1 testClass2 emotion-euiDatePicker-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    class="euiFormControlLayout emotion-euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper emotion-euiFormControlLayout__childrenWrapper"
      style="--euiFormControlLeftIconsCount: 1;"
    >
      <div
        class="euiFormControlLayoutIcons emotion-euiFormControlLayoutIcons-absolute-left"
      >
        <span
          class="euiFormControlLayoutCustomIcon emotion-euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            class="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="calendar"
          />
        </span>
      </div>
      <div
        class="euiPopover emotion-euiPopover-block"
      >
        <div
          class="react-datepicker__input-container"
          data-test-subj="test subject string-input-container"
        >
          <input
            aria-label="Press the down key to open a popover containing a calendar."
            class="euiFieldText euiDatePicker testClass1 testClass2 emotion-euiFieldText-controlOnly-euiTestCss"
            data-test-subj="test subject string-input"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</span>
`;
